Bug 41491 - [swrast] swrast/s_texfetch.c:935: _mesa_get_texel_fetch_func: Assertion `texfetch_funcs[fmt].Name == fmt' failed.
Summary: [swrast] swrast/s_texfetch.c:935: _mesa_get_texel_fetch_func: Assertion `texf...
Status: CLOSED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Other (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: medium critical
Assignee: Brian Paul
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-05 12:24 UTC by Vinson Lee
Modified: 2011-10-07 09:11 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2011-10-05 12:24:57 UTC
mesa: d912669034eb7bf5c162358a7a574ec7a4c963c7 (master)

Run piglit test fdo10370.

$ ./bin/fdo10370 -auto
fdo10370: swrast/s_texfetch.c:935: _mesa_get_texel_fetch_func: Assertion `texfetch_funcs[fmt].Name == fmt' failed.
Aborted (core dumped)


(gdb) bt
#0  0x00e10416 in __kernel_vsyscall ()
#1  0x00729941 in raise (sig=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
#2  0x0072ce42 in abort () at abort.c:92
#3  0x007228e8 in __assert_fail (assertion=0x48ec50 "texfetch_funcs[fmt].Name == fmt", file=0x48ec39 "swrast/s_texfetch.c", line=935, function=0x48ed53 "_mesa_get_texel_fetch_func") at assert.c:81
#4  0x0030ab4a in _mesa_get_texel_fetch_func (format=MESA_FORMAT_RGBA8888, dims=2) at swrast/s_texfetch.c:935
#5  0x0030aee4 in set_fetch_functions (texImage=0x9b99158, dims=2) at swrast/s_texfetch.c:1035
#6  0x0030afe7 in _mesa_update_fetch_functions (texObj=0x9b8ff00) at swrast/s_texfetch.c:1054
#7  0x002e991d in _swrast_update_texture_samplers (ctx=0x99b2be8) at swrast/s_context.c:478
#8  0x002e9b81 in _swrast_validate_derived (ctx=0x99b2be8) at swrast/s_context.c:568
#9  0x002e9521 in _swrast_validate_triangle (ctx=0x99b2be8, v0=0xb6cc6228, v1=0xb6cc6430, v2=0xb6cc6020) at swrast/s_context.c:349
#10 0x002e9cbc in _swrast_Triangle (ctx=0x99b2be8, v0=0xb6cc6228, v1=0xb6cc6430, v2=0xb6cc6020) at swrast/s_context.c:626
#11 0x0032a776 in triangle_rgba (ctx=0x99b2be8, e0=1, e1=2, e2=0) at swrast_setup/ss_tritmp.h:176
#12 0x002af5d9 in _tnl_render_poly_verts (ctx=0x99b2be8, start=0, count=4, flags=57) at tnl/t_vb_rendertmp.h:352
#13 0x002b159f in run_render (ctx=0x99b2be8, stage=0x9a22b58) at tnl/t_vb_render.c:321
#14 0x002a2579 in _tnl_run_pipeline (ctx=0x99b2be8) at tnl/t_pipeline.c:163
#15 0x002a3a52 in _tnl_draw_prims (ctx=0x99b2be8, arrays=0x9a10a54, prim=0x9a0f3a8, nr_prims=1, ib=0x0, min_index=0, max_index=3) at tnl/t_draw.c:538
#16 0x002a3766 in _tnl_vbo_draw_prims (ctx=0x99b2be8, arrays=0x9a10a54, prim=0x9a0f3a8, nr_prims=1, ib=0x0, index_bounds_valid=1 '\001', min_index=0, max_index=3) at tnl/t_draw.c:438
#17 0x0028b434 in vbo_exec_vtx_flush (exec=0x9a0f198, keepUnmapped=1 '\001') at vbo/vbo_exec_draw.c:379
#18 0x002858db in vbo_exec_FlushVertices_internal (exec=0x9a0f198, unmap=1 '\001') at vbo/vbo_exec_api.c:443
#19 0x00286fd3 in vbo_exec_FlushVertices (ctx=0x99b2be8, flags=1) at vbo/vbo_exec_api.c:1048
#20 0x003cc2d2 in enable_texture (ctx=0x99b2be8, state=0 '\000', texBit=64) at main/enable.c:247
#21 0x003ce470 in _mesa_set_enable (ctx=0x99b2be8, cap=3553, state=0 '\000') at main/enable.c:596
#22 0x003cf864 in _mesa_Disable (cap=3553) at main/enable.c:959
#23 0x001cb1b7 in save_Disable (cap=3553) at main/dlist.c:2191
#24 0x08049144 in display () at piglit/tests/bugs/fdo10370.c:81
#25 0x0059e820 in fghRedrawWindow (window=0x99affe8, enumerator=0xbf960bf8) at freeglut_main.c:210
#26 fghcbDisplayWindow (window=0x99affe8, enumerator=0xbf960bf8) at freeglut_main.c:227
#27 0x005a2660 in fgEnumWindows (enumCallback=0x59e790 <fghcbDisplayWindow>, enumerator=0xbf960bf8) at freeglut_structure.c:394
#28 0x0059ecdb in fghDisplayAll () at freeglut_main.c:249
#29 glutMainLoopEvent () at freeglut_main.c:1450
#30 0x0059f605 in glutMainLoop () at freeglut_main.c:1498
#31 0x08049638 in main (argc=2, argv=0xbf960e74) at piglit/tests/bugs/fdo10370.c:170
(gdb) frame 4
#4  0x0030ab4a in _mesa_get_texel_fetch_func (format=MESA_FORMAT_RGBA8888, dims=2) at swrast/s_texfetch.c:935
935	      assert(texfetch_funcs[fmt].Name == fmt);
(gdb) print fmt
$1 = MESA_FORMAT_ALPHA_UINT8
(gdb) print texfetch_funcs[fmt].Name
$2 = MESA_FORMAT_RGBA_INT8
Comment 1 Brian Paul 2011-10-05 12:36:36 UTC
Fixed with commit bf059ebd33b4654334c1d96b6022fd6eef278782
Comment 2 Vinson Lee 2011-10-05 12:39:31 UTC
7a41291c3aa13fc71cc87966b414551f5c7c0e6a is the first bad commit
commit 7a41291c3aa13fc71cc87966b414551f5c7c0e6a
Author: Dave Airlie <airlied@redhat.com>
Date:   Mon Sep 26 21:14:10 2011 +0100

    mesa/formats: add rest of integer formats.
    
    This is taken from reading EXT_texture_integer + EXT_texture_rg in combination,
    
    Comments on necessity of each format, naming of formats and bugs in the
    formats tables please.
    
    Is there any formats I've missed?
    
    Eric looked over this to make sure its consistent at least.
    
    As I've changed the ordering of things in the format table, the follow
    patches are required to avoid regression.
    
    Signed-off-by: Dave Airlie <airlied@redhat.com>

:040000 040000 be53e3f633e21c67c497248893ce6dc038200445 574abe07fb65d2b836aca15a94bb5471c7c447e2 M	src
bisect run success
Comment 3 Vinson Lee 2011-10-07 09:11:14 UTC
mesa: c475a54578bf5473c6c62bc5468ef4fe555164d7 (master)

Verified fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.