swrast: update texfetch_funcs table for new int/uint formats

This only adds dummy entries to the table to fix failed assertions.
Fixes https://bugs.freedesktop.org/show_bug.cgi?id=41491